FIXED: toolbar doesn't overlap 2nd accordian when adding tools

--- a/css/admin.css
+++ b/css/admin.css
@@ -151,11 +151,8 @@ hr {
 }*/
 .ggbtoolbar{
   display: block;
-  /*width: 1000px;*/
   min-height: 50px;
   background: none;
-  z-index: 10000;
-  position: absolute;
 }
 
 .toolbar-target{
